changes index, added form in contact.html

--- a/portfolio/WebContent/index.html
+++ b/portfolio/WebContent/index.html
@@ -27,7 +27,7 @@
 	</aside>
 	<article>
 		<h2>Welkom</h2>
-		<p>Ik ben Joren Vanherwegen, bachelor student toegepaste informatica aan de UCLL.
+		<p>Ik ben Joren Vanherwegen, tweedejaars hogerberoepsonderwijs-student informatica bij Odisee/Realdolmen.
 		Op deze site vinden jullie meer info over mij en indien er nog vragen zijn mogen jullie mij steeds <a href="contact.html">contacteren</a>.</p>
 	</article>
 	
